scrollbar fixes

--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -6,13 +6,26 @@ html {
   color: white;
   font-family: sans-serif;
   text-align: center;
-  overflow: hidden;
 }
 
 body {
   background-image: url(../../images/background.jpg);
   background-size: cover;
   background-color: black;
+}
+
+body *::-webkit-scrollbar {
+  width: 16px;
+}
+
+body *::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+body *::-webkit-scrollbar-thumb {
+  background-color: #ffffff;
+  border-radius: 10px;
+  border: 3px solid #000000;
 }
 
 #opPic {
@@ -107,14 +120,13 @@ body {
 }
 
 .lineUp {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 100%;
   top: 50%;
   left: 50%;
   margin-top: 170px;
@@ -169,6 +181,7 @@ body {
 }
 
 .dropdown-menu {
+  height: calc(85% + 75vh);
   position: absolute;
   left: 0;
   top: calc(100% + .25rem);
