--- a/styles/scss/_boxes.scss
+++ b/styles/scss/_boxes.scss
@@ -1,8 +1,7 @@
 // list
 .lineUp{
-    flex-direction: row;
     display: flex;
-    width: 100%;
+    flex-direction: row;
     top: 50%;
     left: 50%;
     margin-top: 170px;
