--- a/styles/scss/_dropdown.scss
+++ b/styles/scss/_dropdown.scss
@@ -15,6 +15,7 @@
 }
 
 .dropdown-menu {
+    height: calc(85% + 75vh);
     position: absolute;
     left: 0;
     top: calc(100% + .25rem);
