--- a/styles/scss/_settings.scss
+++ b/styles/scss/_settings.scss
@@ -6,11 +6,25 @@ html{
     color: white;
     font-family: sans-serif;
     text-align: center;
-    overflow: hidden;
 }
 
 body{
     background-image: url(../../images/background.jpg);
     background-size: cover;
     background-color: black;
+    
+    //------------scrollbar------------//
+    *::-webkit-scrollbar {
+        width: 16px;
+      }
+    
+      *::-webkit-scrollbar-track {
+        background: transparent;
+      }
+    
+      *::-webkit-scrollbar-thumb {
+        background-color: #ffffff;
+        border-radius: 10px;
+        border: 3px solid #000000;
+      }
 }
